# labelx

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: api_references.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  overview.rst  tutorials.rst
labelx/: __init__.py  __version__.py  api_manager.py  app.py  badges.yaml  config_manager.py  controller.py  labels.yaml  settings.py  utils.py
labelxg/: __init__.py  cli.py
tests/: __init__.py  test_badges.yaml  test_config_manager.py  test_labels.yaml  test_settings.py  test_utils.py
