[project]
name = "labelx"
version = "2.3.1"
authors = [
    {name="Dalwar Hossain", email="dalwar23@pm.me"},
]
description = "Label Creator for GitLab Projects."
keywords = ["labelx", "gitlab", "labels", "badges"]
readme = "README.rst"
requires-python = ">=3.7"
dependencies = [
    "Click==8.1.3",
    "requests == 2.28.2",
    "colorama == 0.4.6",
    "pyyaml == 6.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/dalwar23/labelx"
"documentation" = "https://labelx.readthedocs.io/"

[project.optional-dependencies]
test = ["pytest"]

[project.entry-points."console_scripts"]
labelx = "labelx.app:mission_control"

[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["labelx", "labelx.*"]
namespaces = false
